--- a/SIMEXPRO Frontend/SIMEXPRO Limpia/package.json
+++ b/SIMEXPRO Frontend/SIMEXPRO Limpia/package.json
@@ -14,13 +14,13 @@
         "@hookform/resolvers": "2.9.7",
         "@mui/base": "5.0.0-alpha.93",
         "@mui/icons-material": "5.8.4",
-        "@mui/x-date-pickers": "5.0.0-beta.6",
         "@mui/lab": "5.0.0-alpha.95",
         "@mui/material": "5.10.1",
         "@mui/styles": "5.9.3",
         "@mui/system": "5.10.1",
         "@mui/utils": "5.9.3",
         "@mui/x-data-grid": "5.15.2",
+        "@mui/x-date-pickers": "5.0.0-beta.6",
         "@reduxjs/toolkit": "1.8.5",
         "apexcharts": "3.35.4",
         "autosuggest-highlight": "3.3.4",
@@ -94,7 +94,6 @@
         "babel-loader": "8.1.0"
     },
     "devDependencies": {
-        "react-scripts": "5.0.1",
         "@babel/core": "7.17.10",
         "@babel/eslint-parser": "7.17.0",
         "@babel/node": "7.17.10",
@@ -124,7 +123,8 @@
         "prettier": "^2.4.1",
         "promise": "8.1.0",
         "react-app-alias": "2.2.0",
-        "react-app-rewired": "2.2.1",
+        "react-app-rewired": "^2.2.1",
+        "react-scripts": "5.0.1",
         "source-map-explorer": "2.5.2",
         "tailwindcss": "3.1.8",
         "typescript": "4.6.4",
