--- a/SIMEXPRO Frontend/SIMEXPRO Limpia/package.json
+++ b/SIMEXPRO Frontend/SIMEXPRO Limpia/package.json
@@ -12,15 +12,18 @@
         "@fullcalendar/react": "5.11.2",
         "@fullcalendar/timegrid": "5.11.2",
         "@hookform/resolvers": "2.9.7",
+        "@material-tailwind/react": "^2.0.5",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
         "@mui/base": "5.0.0-alpha.93",
         "@mui/icons-material": "5.8.4",
-        "@mui/x-date-pickers": "5.0.0-beta.6",
         "@mui/lab": "5.0.0-alpha.95",
         "@mui/material": "5.10.1",
         "@mui/styles": "5.9.3",
         "@mui/system": "5.10.1",
         "@mui/utils": "5.9.3",
         "@mui/x-data-grid": "5.15.2",
+        "@mui/x-date-pickers": "5.0.0-beta.6",
         "@reduxjs/toolkit": "1.8.5",
         "apexcharts": "3.35.4",
         "autosuggest-highlight": "3.3.4",
@@ -94,7 +97,6 @@
         "babel-loader": "8.1.0"
     },
     "devDependencies": {
-        "react-scripts": "5.0.1",
         "@babel/core": "7.17.10",
         "@babel/eslint-parser": "7.17.0",
         "@babel/node": "7.17.10",
@@ -125,6 +127,7 @@
         "promise": "8.1.0",
         "react-app-alias": "2.2.0",
         "react-app-rewired": "2.2.1",
+        "react-scripts": "5.0.1",
         "source-map-explorer": "2.5.2",
         "tailwindcss": "3.1.8",
         "typescript": "4.6.4",
