--- a/SIMEXPRO Frontend/SIMEXPRO Limpia/package.json
+++ b/SIMEXPRO Frontend/SIMEXPRO Limpia/package.json
@@ -85,6 +85,7 @@
         "styled-components": "5.3.5",
         "stylis": "4.1.1",
         "stylis-plugin-rtl": "2.1.1",
+        "sweetalert2": "^11.7.18",
         "web-vitals": "2.1.4",
         "yup": "0.32.11"
     },
