--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/SIMEXPRO.API.csproj
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/SIMEXPRO.API.csproj
@@ -34,4 +34,6 @@
     <ProjectReference Include="..\SIMEXPRO.Entities\SIMEXPRO.Entities.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
