--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/SIMEXPRO.DataAccess.csproj
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/SIMEXPRO.DataAccess.csproj
@@ -5,6 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="obj\Debug\net5.0\.NETCoreApp,Version=v5.0.AssemblyAttributes.cs" />
+    <Compile Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.AssemblyInfo.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="bin\Debug\net5.0\SIMEXPRO.DataAccess.deps.json" />
+    <Content Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\project.assets.json" />
+    <Content Include="obj\SIMEXPRO.DataAccess.csproj.nuget.dgspec.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
@@ -14,6 +26,26 @@
 
   <ItemGroup>
     <Folder Include="Repositories\Prod\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bin\Debug\net5.0\ref\SIMEXPRO.DataAccess.dll" />
+    <None Include="bin\Debug\net5.0\SIMEXPRO.DataAccess.dll" />
+    <None Include="bin\Debug\net5.0\SIMEXPRO.DataAccess.pdb" />
+    <None Include="bin\Debug\net5.0\SIMEXPRO.Entities.dll" />
+    <None Include="bin\Debug\net5.0\SIMEXPRO.Entities.pdb" />
+    <None Include="obj\Debug\net5.0\ref\SIMEXPRO.DataAccess.dll" />
+    <None Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.AssemblyInfoInputs.cache" />
+    <None Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.assets.cache" />
+    <None Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.csproj.AssemblyReference.cache" />
+    <None Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.csproj.CopyComplete" />
+    <None Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.dll" />
+    <None Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.GeneratedMSBuildEditorConfig.editorconfig" />
+    <None Include="obj\Debug\net5.0\SIMEXPRO.DataAccess.pdb" />
+    <None Include="obj\project.nuget.cache" />
+    <None Include="obj\SIMEXPRO.DataAccess.csproj.nuget.g.props" />
+    <None Include="obj\SIMEXPRO.DataAccess.csproj.nuget.g.targets" />
   </ItemGroup>
 
   <ItemGroup>
