--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/SIMEXPRO.API.csproj
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/SIMEXPRO.API.csproj
@@ -146,6 +146,6 @@
     <ProjectReference Include="..\SIMEXPRO.Entities\SIMEXPRO.Entities.csproj" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
