--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
@@ -1,7 +1,11 @@
 ﻿{
   "ConnectionStrings": {
     //"ConexionSimexpro": "data source=DESKTOP-E6OAL4S\\SERVIDORLOCALDM; initial catalog=SIMEXPRO; user id=admin1; password=admin1"
-    "ConexionSimexpro": "data source=DESKTOP-KLFABP4\\SQLEXPRESS; initial catalog=SIMEXPRO; Integrated Security=true;"
+    //"ConexionSimexpro": "data source=DESKTOP-KLFABP4\\SQLEXPRESS; initial catalog=SIMEXPRO; Integrated Security=true;"
+    //"ConexionSimexpro": "data source=DESKTOP-EEOQVVU\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=alessm; password=12345"
+    //"ConexionSimexpro": "data source=EJSM\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=EJSM; password=EJSM22"
+
+    "ConexionSimexpro": "data source=DESKTOP-9N0AU71\\SERVIDORLOCAL; initial catalog=SIMEXPRO; user id=infinity; password=infinity"
   },
   "Logging": {
     "LogLevel": {
