--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "ConexionSimexpro": "data source=DESKTOP-E6OAL4S\\SERVIDORLOCALDM; initial catalog=SIMEXPRO; user id=admin1; password=admin1"
+    "ConexionSimexpro": "data source=DESKTOP-IMCPDKE\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=JIsaac; password=123"
   },
   "Logging": {
     "LogLevel": {
