--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
@@ -406,7 +406,7 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": "DESKTOP-E6OAL4S\\SERVIDORLOCALDM.",
+   "UiHint": "practicaahm.SIMEXPRO",
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": true,
    "UseDbContextSplitting": false,
