--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "ConexionSimexpro": "data source=DESKTOP-TSV52PA\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=EJSM; password=EJSM22"
+    //"ConexionSimexpro": "data source=DESKTOP-TSV52PA\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=EJSM; password=EJSM22",
+    "ConexionSimexpro": "data source=practicaahm.database.windows.net; initial catalog=SIMEXPRO; user id=admin1; password=Administracion_123"
   },
   "Logging": {
     "LogLevel": {
