Revert "Merge branch 'Eder-Backend' into alguien-hizo-commit-feo"
This reverts commit cbf2bfa015980a36d0a26bfd8888a8326e7fd8cf, reversing
changes made to 6a62ddb1aefdaf01fa018fe371571b1f0c59b0af.

--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    //"ConexionSimexpro": "data source=DESKTOP-TSV52PA\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=EJSM; password=EJSM22"
+    //"ConexionSimexpro": "data source=DESKTOP-E6OAL4S\\SERVIDORLOCALDM; initial catalog=SIMEXPRO; user id=admin1; password=admin1"
     "ConexionSimexpro": "data source=practicaahm.database.windows.net; initial catalog=SIMEXPRO; user id=admin1; password=Administracion_123"
   },
   "Logging": {
