--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
@@ -2,7 +2,9 @@
   "ConnectionStrings": {
     //"ConexionSimexpro": "data source=DESKTOP-E6OAL4S\\SERVIDORLOCALDM; initial catalog=SIMEXPRO; user id=admin1; password=admin1"
     //"ConexionSimexpro": "data source=practicaahm.database.windows.net; initial catalog=SIMEXPRO; user id=admin1; password=Administracion_123"
-    "ConexionSimexpro": "data source=DESKTOP-9N0AU71\\SERVIDORLOCAL; initial catalog=SIMEXPRO; user id=infinity; password=infinity"
+    //"ConexionSimexpro": "data source=DESKTOP-9N0AU71\\SERVIDORLOCAL; initial catalog=SIMEXPRO; user id=infinity; password=infinity"
+    "ConexionSimexpro": "data source=DESKTOP-115L2GI\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=infinity; password=infinity"
+
   },
   "Logging": {
     "LogLevel": {
