No se que estaba haciendo pero era algo importante

--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
@@ -1,7 +1,9 @@
 ﻿{
   "ConnectionStrings": {
     //"ConexionSimexpro": "data source=DESKTOP-IMCPDKE\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=JIsaac; password=123",
-    "ConexionSimexpro": "data source=practicaahm.database.windows.net; initial catalog=SIMEXPRO; user id=admin1; password=Administracion_123"
+    //"ConexionSimexpro": "data source=practicaahm.database.windows.net; initial catalog=SIMEXPRO; user id=admin1; password=Administracion_123",
+    "ConexionSimexpro": "data source=DESKTOP-9N0AU71\\SERVIDORLOCAL; initial catalog=SIMEXPRO; user id=infinity; password=infinity"
+    //"ConexionSimexpro": "data source=DESKTOP-115L2GI\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=infinity; password=infinity"
   },
   "Logging": {
     "LogLevel": {
