voy a probar la deva en la api

--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
@@ -2,7 +2,8 @@
   "ConnectionStrings": {
     //"ConexionSimexpro": "data source=DESKTOP-IMCPDKE\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=JIsaac; password=123",
     //"ConexionSimexpro": "data source=DESKTOP-KLFABP4\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=aless1; password=123"
-    "ConexionSimexpro": "data source=DESKTOP-TSV52PA\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=EJSM; password=EJSM22"
+    //"ConexionSimexpro": "data source=DESKTOP-TSV52PA\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=EJSM; password=EJSM22"
+    "ConexionSimexpro": "data source=practicaahm.database.windows.net; initial catalog=SIMEXPRO; user id=admin1; password=Administracion_123"
   },
   "Logging": {
     "LogLevel": {
