me tocó hacer ingeniería inversa y tronó pero ya ta bien

--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
@@ -434,7 +434,7 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": "DESKTOP-TSV52PA\\SQLEXPRESS.SIMEXPRO",
+   "UiHint": "practicaahm.SIMEXPRO",
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": true,
    "UseDbContextSplitting": false,
