--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
@@ -432,6 +432,10 @@
       {
          "Name": "[Prod].[tbTipoEmbalaje]",
          "ObjectType": 0
+      },
+      {
+         "Name": "[Adua].[VW_tbDeclaraciones_ValorCompleto]",
+         "ObjectType": 3
       }
    ],
    "UiHint": "practicaahm.SIMEXPRO",
