CRUD PO detalles según pedido de orden

--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
@@ -406,6 +406,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[Prod].[tbPODetallePorPedidoOrdenDetalle]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[Prod].[tbProcesos]",
          "ObjectType": 0
       },
