api sin azure key vault pipipi

--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
@@ -12,5 +12,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "XApiKey": "4b567cb1c6b24b51ab55248f8e66e5cc",
+  "EncryptionKey": "FZWv3nQTyHYyNvdx",
   "AllowedHosts": "*"
 }
