Varias tablas de generales
Se les agrego un campo de tipo bit a las tablas: Unidades de medida, Provincias, Ciudades, Monedas y Paises  para saber si el registro es del modulo de aduana o produccion.

Se hizo ingenieria inversa para cargar esos nuevos campos y se agrego al view model correspondiente de cada tabla y tambien se modifico los repositorios para que en el insert y update se envie ese campo.

--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.Entities/efpt.config.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.Entities/efpt.config.json
@@ -14,11 +14,27 @@
    "SelectedToBeGenerated": 2,
    "Tables": [
       {
-         "Name": "[Adua].[VW_tbDeclaraciones_ValorCompleto]",
-         "ObjectType": 3
+         "Name": "[Gral].[tbCiudades]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[Gral].[tbMonedas]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[Gral].[tbPaises]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[Gral].[tbProvincias]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[Gral].[tbUnidadMedidas]",
+         "ObjectType": 0
       }
    ],
-   "UiHint": "practicaahm.SIMEXPRO",
+   "UiHint": "EJSM\\SQLEXPRESS.SIMEXPRO",
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": true,
    "UseDbContextSplitting": false,
