--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.Entities/efpt.config.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.Entities/efpt.config.json
@@ -14,7 +14,7 @@
    "SelectedToBeGenerated": 2,
    "Tables": [
       {
-         "Name": "[Acce].[tbPantallas]",
+         "Name": "[Prod].[tbDocumentosOrdenCompraDetalles]",
          "ObjectType": 0
       }
    ],
