--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.DataAccess/efpt.config.json
@@ -330,6 +330,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[Prod].[tbDocumentosOrdenCompraDetalles]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[Prod].[tbEstilos]",
          "ObjectType": 0
       },
