Cambios base de datos
Se quito el campo mate_precio de tbMateriales, y el campo prod_Peso de pedidosOrdenDetalles, campos extras en los udp insert de orden de compra como anexar el ciud_Id, tambien en el editar, udp de eliminar de detalles de orden de compra

--- a/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
+++ b/SIMEXPRO Backend/SIMEXPRO_API/SIMEXPRO.API/appsettings.json
@@ -5,7 +5,7 @@
     //"ConexionSimexpro": "data source=DESKTOP-TSV52PA\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=EJSM; password=EJSM22"
     //"ConexionSimexpro": "data source=EJSM\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=EJSM; password=EJSM22"
     //"ConexionSimexpro": "data source=DESKTOP-115L2GI\\SQLEXPRESS; initial catalog=SIMEXPRO; user id=infinity; password=infinity"
-    "ConexionSimexpro": "data source=practicaahm.database.windows.net; initial catalog=SIMEXPRO; user id=admin1; password=Administracion_123"
+    "ConexionSimexpro": "data source=simexpro.database.windows.net; initial catalog=SIMEXPRO; user id=admin1; password=Administracion_123"
   },
   "Logging": {
     "LogLevel": {
