--- a/Pruebas unitarias/SIMEXPRO_API/SIMEXPRO.API/SIMEXPRO.API.csproj
+++ b/Pruebas unitarias/SIMEXPRO_API/SIMEXPRO.API/SIMEXPRO.API.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="FakeItEasy" Version="7.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.5" />
